cluster/manifests/lighthouse-exporter/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lighthouse-exporter
  labels:
    name: lighthouse-exporter
    pod-security.kubernetes.io/enforce: restricted
