cluster/manifests/lighthouse-exporter/overlays/dev/service_entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: kaidotio.github.io
spec:
  exportTo:
    - .
  hosts:
    - kaidotio.github.io
  location: MESH_EXTERNAL
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
